# oreum_survival

./: .envrc  .gitattributes  .pre-commit-config.yaml  LICENSE.md  LICENSES_THIRD_PARTY.md  Makefile  README.md  condaenv_oreum_survival.yml  oreum_survival.code-workspace  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: README_DATA.md
data/raw/: hashes_of_verbatim_files.txt
notebooks/: 000_Intro.ipynb  100_Exponential_Univariate.ipynb  101_Exponential_Regression.ipynb  102_Exponential_CoxPH0.ipynb  200_AFT_Weibull.ipynb  201_AFT_Gompertz.ipynb  202_AFT_GompertzAlt.ipynb  300_Piecewise_CoxPH1.ipynb  301_Piecewise_CoxPH2.ipynb  302_Piecewise_CoxPH3.ipynb
notebooks/renders/: config_pdf.py  config_slides.py
src/engine/: logger.py  utils.py
src/model/: aft.py  exponential.py  piecewise.py  utils.py
